# microbit_v2_temp_humidity

./: Cargo.toml  README.md
src/: main.rs
