[package]
name = "microbit_v2_humidity"
version = "0.1.0"
edition = "2018"

[dependencies.microbit-v2]
version = "0.13.0"
optional = true

[dependencies]
sht31 = "0.2.1"
embedded-hal = "0.2.3"
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

[dev-dependencies]
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

[features]
v2 = ["microbit-v2"]